# swarm_interfaces

./: CMakeLists.txt  README.md  package.xml
include/swarm_interfaces/: fleet_state.hpp  frame_conversions.hpp
msg/: ConnectedAgents.msg  DroneState.msg  Heartbeat.msg  InitiateLandCommand.msg  InitiateLandResponse.msg  InitiateTakeoffCommand.msg  InitiateTakeoffResponse.msg  PrepareExperimentCommand.msg  PrepareExperimentResponse.msg  StartMissionCommand.msg
src/: frame_conversions.cpp
srv/: ConnectAgent.srv  DisconnectAgent.srv  EmergencyStop.srv  InitiateTakeoff.srv  PrepareExperiment.srv  PrepareMission.srv  StartExperiment.srv  StartMission.srv
